--- a/MyBoxOffice/Base.lproj/Main.storyboard
+++ b/MyBoxOffice/Base.lproj/Main.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -70,44 +69,43 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieCell" rowHeight="114" id="VaZ-lI-28z" customClass="MoviesTableViewCell" customModule="MyBoxOffice" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="114"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="movieCell" rowHeight="116" id="VaZ-lI-28z" customClass="MoviesTableViewCell" customModule="MyBoxOffice" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="116"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="VaZ-lI-28z" id="TUA-q8-oi3" customClass="MoviesTableViewCell" customModule="MyBoxOffice" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="113.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="115.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CLq-ha-15e">
-                                                    <rect key="frame" x="23" y="19" width="329" height="76"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CLq-ha-15e">
+                                                    <rect key="frame" x="100" y="8" width="180" height="39"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ETd-EH-kIH">
+                                                    <rect key="frame" x="100" y="72" width="275" height="19"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfS-aA-C0t">
-                                                    <rect key="frame" x="23" y="19" width="329" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfS-aA-C0t">
+                                                    <rect key="frame" x="100" y="47" width="275" height="19"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ETd-EH-kIH">
-                                                    <rect key="frame" x="23" y="74" width="329" height="20.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Hod-BU-tF8">
+                                                    <rect key="frame" x="8" y="8" width="80" height="100"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ieV-qz-eSI">
+                                                    <rect key="frame" x="288" y="15" width="24" height="24"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
                                             </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailingMargin" secondItem="yfS-aA-C0t" secondAttribute="trailing" constant="8" id="3Jy-1E-eAh"/>
-                                                <constraint firstItem="yfS-aA-C0t" firstAttribute="top" secondItem="TUA-q8-oi3" secondAttribute="topMargin" constant="8" id="AwE-4H-Ija"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="ETd-EH-kIH" secondAttribute="bottom" constant="8" id="JON-U5-vh7"/>
-                                                <constraint firstItem="CLq-ha-15e" firstAttribute="centerY" secondItem="TUA-q8-oi3" secondAttribute="centerY" id="JTB-66-bpX"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="ETd-EH-kIH" secondAttribute="trailing" constant="8" id="XiH-Hz-JYd"/>
-                                                <constraint firstItem="ETd-EH-kIH" firstAttribute="leading" secondItem="TUA-q8-oi3" secondAttribute="leadingMargin" constant="8" id="aTr-R9-euo"/>
-                                                <constraint firstItem="yfS-aA-C0t" firstAttribute="leading" secondItem="TUA-q8-oi3" secondAttribute="leadingMargin" constant="8" id="bXd-AM-4HW"/>
-                                                <constraint firstItem="CLq-ha-15e" firstAttribute="leading" secondItem="TUA-q8-oi3" secondAttribute="leadingMargin" constant="8" id="d2G-M4-rUR"/>
-                                                <constraint firstItem="CLq-ha-15e" firstAttribute="top" secondItem="TUA-q8-oi3" secondAttribute="topMargin" constant="8" id="jWf-6s-qMN"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="CLq-ha-15e" secondAttribute="trailing" constant="8" id="qI5-0L-cRK"/>
-                                            </constraints>
                                             <connections>
                                                 <outlet property="dateLabel" destination="ETd-EH-kIH" id="LCB-fS-efT"/>
                                                 <outlet property="infoLabel" destination="yfS-aA-C0t" id="pgr-PA-WFw"/>
@@ -116,7 +114,9 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="dateLabel" destination="ETd-EH-kIH" id="xHA-Uh-WY8"/>
+                                            <outlet property="gradeImageView" destination="ieV-qz-eSI" id="fBE-Zo-f06"/>
                                             <outlet property="infoLabel" destination="yfS-aA-C0t" id="AW4-IT-69N"/>
+                                            <outlet property="thumbImageView" destination="Hod-BU-tF8" id="Vcu-5Y-as8"/>
                                             <outlet property="titleLabel" destination="CLq-ha-15e" id="WsV-gH-xvM"/>
                                             <segue destination="YJm-lE-gBO" kind="show" id="Ke3-5v-vQv"/>
                                         </connections>
@@ -167,6 +167,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="4UZ-ua-igf" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Lps-By-HVl">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.35294117650000001" green="0.41960784309999999" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
