--- a/MyBoxOffice/Base.lproj/Main.storyboard
+++ b/MyBoxOffice/Base.lproj/Main.storyboard
@@ -37,11 +37,11 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="MZS-TT-Nrf">
-                                                    <rect key="frame" x="0.0" y="0.0" width="179" height="170"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="179" height="174.5"/>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WRg-t0-2Z6">
-                                                    <rect key="frame" x="16" y="178" width="147" height="29"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                    <rect key="frame" x="12" y="182.5" width="155" height="30.5"/>
+                                                    <fontDescription key="fontDescription" name=".SFNSDisplay" family=".SF NS Display" pointSize="26"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -58,10 +58,10 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dEo-2h-KQx">
-                                                    <rect key="frame" x="141" y="-2" width="36" height="36"/>
+                                                    <rect key="frame" x="147" y="8" width="30" height="30"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="36" id="8bH-XY-VcO"/>
-                                                        <constraint firstAttribute="height" constant="36" id="sFm-h6-WGq"/>
+                                                        <constraint firstAttribute="width" constant="30" id="8bH-XY-VcO"/>
+                                                        <constraint firstAttribute="height" constant="30" id="sFm-h6-WGq"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
@@ -69,15 +69,15 @@
                                         <constraints>
                                             <constraint firstAttribute="trailingMargin" secondItem="Icw-md-KhV" secondAttribute="trailing" constant="8" id="0Ra-JH-Ctb"/>
                                             <constraint firstItem="MZS-TT-Nrf" firstAttribute="top" secondItem="Acx-Xn-wlO" secondAttribute="top" id="2ju-L6-LY9"/>
-                                            <constraint firstItem="WRg-t0-2Z6" firstAttribute="leading" secondItem="Acx-Xn-wlO" secondAttribute="leadingMargin" constant="8" id="DXW-7K-CfO"/>
+                                            <constraint firstItem="WRg-t0-2Z6" firstAttribute="leading" secondItem="Acx-Xn-wlO" secondAttribute="leadingMargin" constant="4" id="DXW-7K-CfO"/>
                                             <constraint firstAttribute="bottomMargin" secondItem="BsL-iG-JS9" secondAttribute="bottom" constant="4" id="F8G-k8-boB"/>
                                             <constraint firstItem="MZS-TT-Nrf" firstAttribute="top" secondItem="Acx-Xn-wlO" secondAttribute="top" id="FxT-sx-3RF"/>
                                             <constraint firstItem="MZS-TT-Nrf" firstAttribute="leading" secondItem="Acx-Xn-wlO" secondAttribute="leading" id="Hci-r0-gu6"/>
                                             <constraint firstItem="WRg-t0-2Z6" firstAttribute="top" secondItem="MZS-TT-Nrf" secondAttribute="bottom" constant="8" id="JFa-ca-T3Z"/>
                                             <constraint firstItem="Icw-md-KhV" firstAttribute="leading" secondItem="Acx-Xn-wlO" secondAttribute="leadingMargin" constant="8" id="JjO-LQ-5fZ"/>
-                                            <constraint firstItem="Icw-md-KhV" firstAttribute="top" secondItem="WRg-t0-2Z6" secondAttribute="bottom" constant="16" id="adw-tu-kIf"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="WRg-t0-2Z6" secondAttribute="trailing" constant="8" id="b2x-4e-ply"/>
-                                            <constraint firstItem="dEo-2h-KQx" firstAttribute="top" secondItem="Acx-Xn-wlO" secondAttribute="topMargin" constant="-10" id="h4r-Bw-h0s"/>
+                                            <constraint firstItem="Icw-md-KhV" firstAttribute="top" secondItem="WRg-t0-2Z6" secondAttribute="bottom" constant="10" id="adw-tu-kIf"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="WRg-t0-2Z6" secondAttribute="trailing" constant="4" id="b2x-4e-ply"/>
+                                            <constraint firstItem="dEo-2h-KQx" firstAttribute="top" secondItem="Acx-Xn-wlO" secondAttribute="topMargin" id="h4r-Bw-h0s"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="dEo-2h-KQx" secondAttribute="trailing" constant="-6" id="lhW-rS-93x"/>
                                             <constraint firstItem="BsL-iG-JS9" firstAttribute="leading" secondItem="Acx-Xn-wlO" secondAttribute="leadingMargin" constant="8" id="qub-SB-JzP"/>
                                             <constraint firstItem="BsL-iG-JS9" firstAttribute="top" secondItem="Icw-md-KhV" secondAttribute="bottom" constant="8" id="vdn-Ik-3r6"/>
@@ -140,7 +140,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CLq-ha-15e">
                                                     <rect key="frame" x="100" y="8" width="181" height="29"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -232,6 +232,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.35294117650000001" green="0.41960784309999999" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="selectedImageTintColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </tabBar>
                     <connections>
                         <segue destination="MIq-w8-rA7" kind="relationship" relationship="viewControllers" id="tLg-FC-vL2"/>
@@ -252,6 +253,12 @@
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.3529411764705882" green="0.41960784313725491" blue="0.74509803921568629" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -272,6 +279,12 @@
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.3529411764705882" green="0.41960784313725491" blue="0.74509803921568629" alpha="1" colorSpace="calibratedRGB"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        </textAttributes>
+                        <textAttributes key="largeTitleTextAttributes">
+                            <color key="textColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -288,6 +301,6 @@
         <image name="ic_table" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Ke3-5v-vQv"/>
+        <segue reference="2uk-gp-sol"/>
     </inferredMetricsTieBreakers>
 </document>
